# mmterm

./: .gitignore  .kimun.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  install.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
assets/: config.toml
bench/: run_inside_mmterm.sh
benches/: parser_throughput.rs  scroll_throughput.rs
doc/: LLMs.md  SPEC.md
docs/superpowers/plans/: 2026-06-09-per-pane-font-scaling.md
docs/superpowers/specs/: 2026-06-09-per-pane-font-scaling-design.md
scripts/: make-macos-app.sh  make_demo_gif.sh
src/: app_event.rs  app_event_test.rs  app_state.rs  app_state_test.rs  cli.rs  command_palette.rs  config.rs  config_test.rs  config_tests.rs  dpi.rs  dpi_test.rs  drain.rs  drain_test.rs  font.rs  font_test.rs  geometry.rs  geometry_test.rs  history.rs  history_test.rs  input_ops.rs  input_ops_test.rs  lib.rs  logging.rs  logging_test.rs  main.rs  main_test.rs  motion.rs  mouse.rs  mouse_ops.rs  pane_ops.rs  pane_ops_test.rs  render_ops.rs  restore.rs  restore_test.rs  scaling.rs  scaling_test.rs  search.rs  search_test.rs  session_test.rs  statusbar.rs  (+13 more)
src/config/: config_test.rs  mod.rs  tui_config.rs  tui_config_test.rs
src/input/: keybindings.rs  keybindings_test.rs  keybindings_tests.rs  keymap.rs  keymap_test.rs  mod.rs  mode.rs  motion.rs  mouse_ops.rs  mouse_ops_test.rs  mouse_test.rs
src/pty/: mod.rs  session.rs  session_test.rs
src/renderer/: blit.rs  draw_fns.rs  glyph.rs  glyph_test.rs  mod.rs  overlays.rs  overlays_test.rs  render_ops.rs  screenshot.rs  text.rs  text_test.rs  views.rs  views_test.rs
src/session/: mod.rs  session_test.rs
src/terminal/: grid.rs  grid_test.rs  grid_tests.rs  mod.rs  parser.rs  parser_test.rs  parser_tests.rs  scenario_test.rs  sixel.rs  sixel_test.rs
src/theme/: mod.rs  theme_test.rs
src/theme/themes/: catppuccin-mocha.toml  default.toml  dracula.toml  ereader.toml  gruvbox-dark.toml  monokai.toml  nord.toml  one-dark.toml  solarized-dark.toml  tokyo-night.toml  totoro.toml
src/ui/: command_palette.rs  layout.rs  layout_test.rs  mod.rs  pane.rs  pane_test.rs  pane_tests.rs  statusbar.rs  statusbar_test.rs  tabs.rs  tabs_test.rs
tests/: install_test.sh  make_macos_app_test.sh
