[package]
name = "mmterm"
version = "0.2.0"
edition = "2024"
description = "A cross-platform terminal emulator with modal input (vim-style), PTY backend, and split-pane support"

[[bin]]
name = "mmterm"
path = "src/main.rs"

[dependencies]
# Windowing (cross-platform: X11/Wayland on Linux, Cocoa on macOS)
winit = "0.30"

# Software framebuffer renderer (CPU-based, solid foundation)
softbuffer = "0.4"

# Font rasterization
fontdue = "0.9"

# ANSI/VT escape code parser
vte = "0.13"

# PTY backend (Linux/macOS: forkpty/posix_openpt)
portable-pty = "0.8"

# Concurrency: channel between PTY thread and render thread
crossbeam-channel = "0.5"

# Clipboard
arboard = "3"

# System font discovery
font-kit = "0.14"

# Unicode character width (wide/narrow for CJK, emoji)
unicode-width = "0.2"

# FreeType bindings for color emoji rendering (CBDT/CBLC)
freetype = "0.7"

# Config file parsing
toml = "0.8"
serde = { version = "1", features = ["derive"] }
dirs-next = "2"

# PNG decoding for window icon
image = { version = "0.25", default-features = false, features = ["png"] }

# Regex search in scrollback
regex = "1"

# Error handling
anyhow = "1"

# Logging
log = "0.4"
env_logger = "0.11"
fern = "0.7"
chrono = "0.4"
base64 = "0.22.1"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
